<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/pref_category_general"
        android:key="pref_key_general">
	    <CheckBoxPreference
	        android:key="pref_auto_start_app_if_connected_to_guest"
	        android:title="@string/pref_auto_login_title"
	        android:summary="@string/pref_auto_login_summary"
	        android:defaultValue="true" />
	    <CheckBoxPreference
	        android:key="pref_allow_analytics"
	        android:title="@string/pref_analytics_title"
	        android:summary="@string/pref_analytics_summary"
	        android:defaultValue="true" />
    </PreferenceCategory>
	    	    
    <PreferenceCategory
        android:title="@string/pref_category_internet_test"
        android:key="pref_key_internet_test">
	    <EditTextPreference
	        android:key="pref_test_url"
	        android:title="@string/pref_internet_test_url_title"
	        android:summary="@string/pref_internet_test_url_summary"
	        android:defaultValue="www.google.com" />
    </PreferenceCategory>
    
    <!-- PreferenceCategory
        android:title="@string/pref_category_debug"
        android:key="pref_key_debug">
	    <CheckBoxPreference
	        android:key="pref_is_debug_mode"
	        android:title="@string/pref_is_debug_mode_title"
	        android:summary="@string/pref_is_debug_mode_summary"
	        android:defaultValue="false" />
    </PreferenceCategory-->
    
</PreferenceScreen>