<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/lblEmail" />

    <EditText
        android:id="@+id/edtEmail"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress" >

        <requestFocus />
    </EditText>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/lblPassword" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="100" >

        <EditText
            android:id="@+id/edtPassword"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="20"
            android:ems="10"
            android:inputType="textPassword" />

        <ImageView
            android:id="@+id/imgEyesOpen"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="80"
            android:src="@drawable/ic_eye" />
    </LinearLayout>

    <CheckBox
        android:id="@+id/chkTermsOfUse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:checked="true"
        android:text="@string/lblAcceptTermsOfUse"
        android:textColor="#FF0000" />

    <Button
        android:id="@+id/btnConnect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:onClick="onClickOnConnect"
        android:text="@string/btn_connect" />

    <LinearLayout
        android:id="@+id/layoutConnexionDetails"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="vertical"
        android:visibility="invisible" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lblAccess" />

        <EditText
            android:id="@+id/edtAccess"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:editable="false"
            android:ems="10"
            android:enabled="false"
            android:focusable="false" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lblConnectionTime" />

        <EditText
            android:id="@+id/edtUniversalTime"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:editable="false"
            android:ems="10"
            android:enabled="false"
            android:focusable="false" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lblIPAddress" />

        <EditText
            android:id="@+id/edtIp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:editable="false"
            android:ems="10"
            android:enabled="false"
            android:focusable="false" />

        <Button
            android:id="@+id/btnDisconnect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:enabled="false"
            android:onClick="onClickOnDisconnect"
            android:text="@string/btn_disconnect" />
    </LinearLayout>

</LinearLayout>